RESOLVED FIXED 61984
Cloned <keygen> shadow element does not have the right pseudo ID
https://bugs.webkit.org/show_bug.cgi?id=61984
Summary Cloned <keygen> shadow element does not have the right pseudo ID
Dominic Cooney
Reported 2011-06-02 19:52:23 PDT
Resulting in the right rules not being applied from the UA stylesheet.
Attachments
Patch (5.05 KB, patch)
2011-06-03 02:18 PDT, Dominic Cooney
tkent: review+
Dominic Cooney
Comment 1 2011-06-03 02:18:00 PDT
Kent Tamura
Comment 2 2011-06-03 02:25:48 PDT
Comment on attachment 95875 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=95875&action=review ok > Source/WebCore/ChangeLog:4 > 2011-06-03 Dominic Cooney <dominicc@chromium.org> > > + Reviewed by NOBODY (OOPS!). > + The diff doesn't start at the beginning of ChangeLog.
Dominic Cooney
Comment 3 2011-06-03 03:36:23 PDT
Ryosuke Niwa
Comment 4 2012-04-21 17:58:20 PDT
Comment on attachment 95875 [details] Patch Clearing cq?
Note You need to log in before you can comment on or make changes to this bug.